--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mostafa-wahba.github.io/ReactWeatherApp",
+  "homepage": "https://mostafa-wahba.github.io/MessengerChat",
   "name": "messenger-app",
   "version": "0.1.0",
   "private": true,
